# GVNE

./: .gitignore  .gitmodules  CHANGELOG  CMakeLists.txt  ChangeLog  README.md  appveyor.yml
Config/: Info.plist
QRC/: qml.qrc
QRC/QML/: main.qml
Resources/: Readme.md  icon.icns
Sources/Headers/: main.h
Sources/Sources/: main.cpp
Src/: ApplicationInfo.cpp  ApplicationInfo.h  Main.cpp  Main.h  gvne.cpp  gvne.h
docs/: _config.yml  index.md
lib/GLAD-3.3/: Readme
lib/GLAD-3.3/GLAD-3.3-Debug/include/glad/: glad.h
lib/GLAD-3.3/GLAD-3.3-Debug/src/: glad.c
lib/GLAD-3.3/GLAD-3.3-Release/include/glad/: glad.h
lib/GLAD-3.3/GLAD-3.3-Release/src/: glad.c
